# camel-raisim-projects-V4

./: .gitignore  CMakeLists.txt  README.md
camel-canine/: CMakeLists.txt  README.md
camel-canine-leg-left/: CMakeLists.txt
camel-canine-leg-left/simulation/: CMakeLists.txt  SingleLeggedSimulation.cpp  SingleLeggedSimulation.hpp
camel-canine-leg-left/simulation/GUI/: qcustomplot.cpp  qcustomplot.h  simulationMainwindow.cpp  simulationMainwindow.h  simulationMainwindow.ui  ui_simulationMainwindow.h
camel-canine-leg-left/simulation/include/: SingleLeggedRobot.hpp  SingleLeggedSharedMemory.hpp
camel-canine-leg-left/simulation/include/controller/: SingleLeggedIDController.hpp  SingleLeggedMPCController.hpp  SingleLeggedPDController.hpp
camel-canine-leg-left/simulation/src/: SingleLeggedRobot.cpp
camel-canine-leg-left/simulation/src/controller/: SingleLeggedIDController.cpp  SingleLeggedMPCController.cpp  SingleLeggedPDController.cpp
camel-canine/canine_controller/ControlMain/: CMakeLists.txt
camel-canine/canine_controller/ControlMain/include/ControlMain/: HighControlMain.hpp  LowControlMain.hpp
camel-canine/canine_controller/ControlMain/src/: HighControlMain.cpp  LowControlMain.cpp
camel-canine/canine_controller/ControlUtils/: CMakeLists.txt
camel-canine/canine_controller/ControlUtils/include/ControlUtils/: CubicReplanning.hpp  CubicSwingLeg.hpp  CubicSwingLegLocal.hpp  Gait.hpp  SwingLeg.hpp  SwingLegLocal.hpp
camel-canine/canine_controller/ControlUtils/src/: CubicReplanning.cpp  CubicSwingLeg.cpp  CubicSwingLegLocal.cpp  Gait.cpp  SwingLeg.cpp  SwingLegLocal.cpp
camel-canine/canine_controller/LowController/: CMakeLists.txt
camel-canine/canine_controller/LowController/include/LowController/: LowPDcontrol.hpp  LowWholeBodyPDController.hpp
camel-canine/canine_controller/LowController/src/: LowPDcontrol.cpp  LowWholeBodyPDController.cpp
camel-canine/canine_controller/PDcontroller/: CMakeLists.txt
camel-canine/canine_controller/PDcontroller/include/PDcontroller/: JointPDController.hpp
camel-canine/canine_controller/PDcontroller/src/: JointPDController.cpp
camel-canine/canine_controller/convexMPC/: CMakeLists.txt
camel-canine/canine_controller/convexMPC/include/convexMPC/: MPCController.hpp  MPCSolver.hpp  MPCSolverLocal.hpp
camel-canine/canine_controller/convexMPC/src/: MPCController.cpp  MPCSolver.cpp  MPCSolverLocal.cpp
camel-canine/canine_demo/: CanineMain.cpp  CanineSimul.cpp
camel-canine/canine_fsm/: CMakeLists.txt
camel-canine/canine_fsm/include/canine_fsm/: MainFSM.hpp
camel-canine/canine_fsm/src/: MainFSM.cpp  SimulCommunication.cpp
camel-canine/canine_simulation/: CMakeLists.txt
camel-canine/canine_simulation/include/canine_simulation/: SimulCommand.hpp  SimulCommunication.hpp  SimulControlPanel.hpp  SimulControlPanelHigh.hpp  SimulMain.hpp  SimulStateEstimator.hpp  SimulVisualizer.hpp
camel-canine/canine_simulation/src/: SimulCommand.cpp  SimulCommunication.cpp  SimulControlPanel.cpp  SimulControlPanelHigh.cpp  SimulMain.cpp  SimulStateEstimator.cpp  SimulVisualizer.cpp
camel-canine/canine_util/: CMakeLists.txt
camel-canine/canine_util/include/canine_util/: CanMotorLB.hpp  CanMotorLF.hpp  CanMotorRB.hpp  CanMotorRF.hpp  Command.hpp  DataAnalysis.hpp  Filter.hpp  RobotMath.hpp  StateEstimator.hpp
camel-canine/canine_util/src/: CanMotorLB.cpp  CanMotorLF.cpp  CanMotorRB.cpp  CanMotorRF.cpp  Command.cpp  DataAnalysis.cpp  Filter.cpp  RobotMath.cpp  StateEstimator.cpp
camel-canine/canine_visualizer/canine_gui/: CMakeLists.txt
camel-canine/canine_visualizer/canine_gui/include/canine_gui/: mainwindow.h
camel-canine/canine_visualizer/canine_raisim/: CMakeLists.txt
camel-canine/canine_visualizer/canine_raisim/include/canine_raisim/: RobotVisualization.hpp
camel-canine/canine_visualizer/canine_raisim/src/: RobotVisualization.cpp
camel-raisim-tools/Simulation/include/: Controller.hpp  Robot.hpp  Simulation.hpp
camel-raisim-tools/Simulation/src/: Controller.cpp  Robot.cpp  Simulation.cpp
camel-thirdparty/qpOASES/src/: MessageHandling.cpp
camel-tools/: CMakeLists.txt  README.md
camel-tools/examples/: CMakeLists.txt
camel-tools/examples/src/: example_CSVFileWrite.cpp  example_Eigen.cpp  example_EncoderRE22SC.cpp  example_GradientDescentOptimizer.cpp  example_IMU-Lord.cpp  example_RealTimeThread.cpp  example_SGDmodel.cpp  example_SensorLoadCell.cpp  example_TrajectoryGenerator.cpp
camel-tools/filter/: CMakeLists.txt
camel-tools/filter/include/: LPF.hpp  filter.hpp
camel-tools/filter/src/: LPF.cpp
camel-tools/optimizer/: CMakeLists.txt
camel-tools/optimizer/include/: GradientDescentOptimizer.hpp  optimizer.hpp
camel-tools/optimizer/src/: GradientDescentOptimizer.cpp
camel-tools/sensor/: CMakeLists.txt
camel-tools/sensor/include/: LoadCell.hpp  LordImu3DmGx5Ahrs.hpp  MPU9250.h  RE22SC.h  T265.hpp  sensor.hpp
camel-tools/sensor/src/: LoadCell.cpp  LordImu3DmGx5Ahrs.cpp  MPU9250.cpp  RE22SC.cpp  T265.cpp
camel-tools/thread/: CMakeLists.txt
camel-tools/trajectory/: CMakeLists.txt
camel-tools/trajectory/include/: CubicTrajectoryGenerator.hpp  QuadTrajectoryGenerator.hpp  QuinticTrajectoryGenerator.hpp  SineTrajectoryGenerator.hpp  trajectory.hpp
camel-tools/trajectory/src/: CubicTrajectoryGenerator.cpp  QuadTrajectoryGenerator.cpp  QuinticTrajectoryGenerator.cpp  SineTrajectoryGenerator.cpp
camel-urdf/: camel_RMDX8_pro.urdf  camel_SRB_quad.urdf  camel_cubli.urdf  camel_double_pendulum.urdf  camel_momentum_inverted_pendulum.urdf  camel_momentum_inverted_pendulum_with_incline.urdf  camel_simple_pendulum.urdf  camel_single_leg_3dof.urdf
camel-urdf/camel_jinee_single_leg/: base_link.STL  calf.STL  foot.STL  jinee_single_leg.urdf  urdf.urdf
camel-urdf/camel_single_leg_left/: camel_single_leg.urdf  link_1.STL  link_2.STL
camel-urdf/camel_single_leg_right/: base_link.STL  camel_single_leg.urdf
camel-urdf/camel_wire_arm/: camel_wire_arm.urdf  camel_wire_arm1.urdf  camel_wire_arm2.urdf
camel-urdf/canine/canineV1/meshes/: L_L_calf.STL  L_L_hip.STL  L_L_thigh.STL  L_U_calf.STL  L_U_hip.STL  (+7 more)
(+23 files in other folders)
